<resources>
    <string name="app_name">BarCode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="nama_panjang">Nama Panjang</string>
    <string name="nis">NIS</string>
    <string name="nisn">NISN</string>
    <string name="create">Create</string>
    <string name="baik">Hal baik apa yang terjadi?</string>
    <string name="biasa">Oh! Apa yang terjadi hari ini?</string>
    <string name="buruk">Ada apa denganmu??</string>

    <string name="slidetitle1">Scan QR untuk absensi instan</string>
    <string name="slidedetail1">Cukup pindai kode QR untuk mendaftarkan presensi dengan cepat dan akurat, memastikan proses check-in yang lancar dan efisien.</string>
    <string name="slidetitle2">Jadwal dan Informasi Lengkap Setiap Pelajaran</string>
    <string name="slidedetail2">Memungkinkan Anda melihat jadwal dan informasi lengkap setiap pelajaran, memudahkan pengelolaan waktu dan materi belajar.</string>
    <string name="slidetitle3">Peringkat Siswa Paling Rajin</string>
    <string name="slidedetail3">menampilkan peringkat siswa paling rajin berdasarkan kehadiran dan partisipasi, memotivasi untuk terus berprestasi.</string>
    <string name="slidetitle4">Hello!</string>
    <string name="slidedetail4">Welcome to the Barcode App. Scan your way to seamless and reliable attendance.</string>
    <string name="kirim">Kirim</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="kelas">Kelas</string>
    <string name="absen">Absen</string>
    <string name="jurusan">Jurusan</string>
    <string name="update">Update</string>
</resources>