<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hrefLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make Your Profile"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:cardCornerRadius="62.5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hrefLogin">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="23dp"
                android:src="@drawable/baseline_person_24" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/nama_panjang"
                android:textColor="@color/gray2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputNama"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/nama_panjang"
                    android:inputType="text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/absen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/nama_panjang"
                android:textColor="@color/gray2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputAbsen"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="Absen"
                    android:inputType="text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/kelas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/kelas"
                android:textColor="@color/gray2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputKelas"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/kelas"
                    android:inputType="text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/nis"
                android:textColor="@color/gray2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputNis"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/nis"
                    android:inputType="text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/nisn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/nisn"
                android:textColor="@color/gray2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputNisn"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/nisn"
                    android:inputType="text"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:text="@string/email"
                android:textColor="@color/gray2"/>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputEmail"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#00000000"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnCreate"
                style="@style/buttonGradient"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="@string/save" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>