<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterProfileActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Make Your Profile"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="125dp"
            android:layout_height="125dp"
            app:cardCornerRadius="62.5dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="23dp"
                android:src="@drawable/baseline_person_24" />
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:paddingStart="30dp"
            android:paddingEnd="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputNama"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nama_panjang"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputAbsen"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Absen"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputKelas"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Kelas"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputJurusan"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Jurusan"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputNisn"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nisn"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                app:cardElevation="4dp">

                <EditText
                    android:id="@+id/inputNis"
                    style="@style/input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nis"
                    android:inputType="textPassword"
                    android:textSize="20sp" />
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btnCreate"
                style="@style/buttonGradient"
                android:layout_width="match_parent"
                android:layout_height="51dp"
                android:text="@string/create" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>